# HumanlikeAI

./: .env.example  .gitignore  LICENSE  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 01b111d5ae14_add_skills_column_to_characters.py  62721613f103_add_news_cache_and_user_location.py  8ca0080ceb47_add_ai_characters_and_character_images.py  a3f7e2d91c04_add_character_emotion_images.py  b5c2e8f43a17_add_chat_messages.py  bd8056cfca38_initial_tables.py
app/: config.py  main.py
app/api/: character_routes.py  message_routes.py  user_routes.py  ws_handler.py
app/db/: session.py
app/db/repositories/: character_repo.py  message_repo.py  news_repo.py  user_repo.py
app/models/: __init__.py  character.py  conversation.py  message.py  news.py  user.py
app/schemas/: character.py  message.py  ws_messages.py
app/services/: embeddings.py  emotion.py  emotion_image_gen.py  emotion_model.py  gemini_chat.py  gemini_live.py  image_gen.py  media.py  memory.py  news_search.py  prompt_builder.py
app/workers/: memory_worker.py
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/lib/config/: constants.dart  responsive.dart  theme.dart
frontend/lib/models/: character.dart  message.dart  user.dart  (+1 more)
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: audio_recorder.js  camera_preview.js  index.html  manifest.json  pcm_player.js
frontend/windows/: CMakeLists.txt
(+45 files in other folders)
